2014-08-30	Dominik Reichardt <dominus@users.sourceforge.net>
	* audio/midi_drivers/forked_player.h: disabled forked midi since "using forked 
	  is a very bad idea" (wjp) and people were having crashes due to it. Thanks 
	  to i30817 for the patch. Someone else may remove it completely.
	* audio/midi_drivers/MidiDriver.cpp: moved FMOpl Midi driver to the top of the 
	  list as it should always work right away. Thanks to i30817 for the patch.

2014-07-29	Malignant Manor <malignantmanor@users.sourceforge.net>
	* Makefile.mingw: Remove code from accidental commit.

2014-07-17	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/compiler/ucexpr.cc: Fixed regression in usecode compiler from bug
	  #1879 "Keyring: healing and resurrecting broken".

2014-06-13	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* objs/egg.cc: Fixing bug #1865 "(Anti magic/sparkle) Weather takes too long
	  to change": weather eggs now reset weather when they are deleted, which
	  matches the original's behavior.
	  Fixing bug #1848 "SS: Broken traps in Abandoned Outpost". Behavior seems
	  to match original, but I have no idea if this breaks other things or not.
	* configure.ac: Removed a couple of options in paranoid-warnings.

2014-05-10	Dominik Reichardt <dominus@users.sourceforge.net>
	* audio/midi_drivers/CoreMidiDriver.cpp: added stdout message when CoreMidi 
	  destination is not available and default is used.
	* updated documentation and FAQ
		
2014-04-29	Dominik Reichardt <dominus@users.sourceforge.net>
	* audio/midi_drivers/CoreMidiDriver.cpp: On OS X if you have more than 
	  one MIDI device (real as in more than one Roland device or software as in MUNT)
	  you can now tell Exult which one to use via setting audio/midi/coremidi_device
	  in exult.cfg. Stdout prints the device IDs and names when you use the CoreMidi
	  midi driver. Thanks to Qbix of DOSBox and Digitall of ScummVM for most of
	  the code.

2014-03-24	Dominik Reichardt <dominus@users.sourceforge.net>